Edit FT and add input to HTML template

--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -3,7 +3,12 @@
     <title> Quiz app </title>
 </head>
 <body>
+    <h1>create question</h1>
+    <form method="POST">
+        <input name="question_text" id="question" placeholder="Enter Question"></input><br>
+        <input type="radio" name="ans" id="ans_t" value="True">True</input><br>
+        <input type="radio" name="ans" id="ans_f" value="False">False</input><br>
 
-
+    </form>
 </body>
 </html>
