add FT to test question table

--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -9,6 +9,12 @@
         <input type="radio" name="ans" id="ans_t" value="True">True</input><br>
         <input type="radio" name="ans" id="ans_f" value="False">False</input><br>
 
-    </form>
+        <button id="add_btn">Add</button>
+    </form><br>
+
+    <h2> Question </h2>
+    <table id="question_table">
+
+    </table>
 </body>
 </html>
