edit FT delay and HTMLtemplate

--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -15,7 +15,9 @@
 
     <h2> Question </h2>
     <table id="question_table">
-        <tr> <td> {{ question }} </td> </tr>
+        {% for question in questions%}
+        <tr> <td> {{ question.text }} </td> </tr>
+        {% endfor %}
     </table>
 </body>
 </html>
