edit incorrect FT

--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -18,7 +18,7 @@
         {% for question in questions%}
         <tr> 
             <td><b style="font-size: 20px"> {{ question.text }} </b> <br>  
-            <b> answer correct people: {{question.correct_count}}, answer people: {{question.count}}</b>
+            <b>correct answer: {{question.correct_count}}, total answer: {{question.count}}</b>
                 <form method="POST" action="/ans/{{question.id}}">
                     {% csrf_token %}
                     <input type="radio" name="ans" id="ans_t_{{question.id}}" value="True">True</input><br>
